# verified-delegation-protocol

./: .gitignore  CITATION.cff  EXPERIMENTAL_DESIGN.md  FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  pyproject.toml  reproduce.sh
blog/: conference_abstract.md  discord_post.md  draft.md  linkedin_post.md  reddit_post.md  substack_intro.md
config/: base.yaml
docs/: CONTENT_PLAN.md  DECISION_LOG.md
fp22/: CONTENT_PLAN.md  EXPERIMENTAL_DESIGN.md  FINDINGS.md  HYPOTHESIS_REGISTRY.md  QUALITY_SCORE.md
fp22/blog/: draft.md
fp22/content/: conference_abstract.md  linkedin.md  substack.md
fp22/outputs/experiments/: e0_results.json  e1_evaluations.json  e2_failure_analysis.json  e3_statistics.json
fp22/scripts/: make_figures.py  run_experiments.py
fp22/src/: __init__.py  agent_runner.py  evaluator.py  research_tasks.py
fp22/tests/: test_measurements.py
scripts/: make_report_figures.py  run_experiments.py
src/: agent.py  judge.py  protocol.py  testbed.py
tests/: test_protocol.py
